--- a/spawn/client/templates/events/eventItem.html
+++ b/spawn/client/templates/events/eventItem.html
@@ -5,26 +5,40 @@ Add max participants
 
 -->
 <template name="eventItem">
-    <a href="{{pathFor 'viewEvent'}}" class="tile-thumbnail">
+        <a href="{{pathFor 'viewEvent'}}" class="tile-thumbnail">
+            <span><h2 style="margin-bottom:10px">{{name}}</h2></span>
+            <div class="row">
+                <span><h5>Hosted by {{host}} at {{get12Time}}</h5></span>
+            </div>
 
-        <div class="row"><span><h2>{{name}}</h2></span></div>
-        <div class="row">
-            <span><h6>Hosted by {{host}} at {{get12Time}}</h6></span>
-        </div>
-        <div class="row">
-            <div class="col-xs-2 tile-bar"><img class="img-circle tile-image" src={{hostPic}}> </div>
-            <div class="col-xs-2 tile-bar"><img class="img-circle tile-image" src={{hostPic}}></div>
-            <div class="col-xs-2 tile-bar"><img class="img-circle tile-image" src={{hostPic}}></div>
-            <div class="col-xs-2 tile-bar">
-                <h1>+{{numParticipants}}</h1></div>
-            <div class="col-xs-2"><span class="badge">{{getDistance}} miles</span></div>
-        </div>
-        <div class="row">
-            <div class="col-xs-2 tile-bar"><img class="img-circle tile-image" src={{hostPic}}> </div>
-            <div class="col-xs-2 tile-bar"><img class="img-circle tile-image" src={{hostPic}}></div>
-            <div class="col-xs-2 tile-bar"><img class="img-circle tile-image" src={{hostPic}}></div>
-            <div class="col-xs-2 tile-bar"></div>
-            <div class="col-xs-2"><span class="badge">{{getCountdown}}</span></div>
-        </div>
-    </a>
+            <div class="row">
+                <div class="col-xs-4 tile-bar">
+                    <img class="img-circle tile-image" src={{hostPic}}>
+                </div>
+                <div class="col-xs-8 tile-bar">
+                    <div class="row">
+                        <div class="progress" style="margin-bottom:0px">
+                            <div class="progress-bar progress-bar-striped active people-going" role="progressbar" aria-valuenow="{{attendees.length}}" aria-valuemin="0" aria-valuemax="{{numParticipants}}" style="width: {{getProgress}}%">
+                                {{attendees.length}} / {{numParticipants}}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6 ">
+                                <h5>Distance</h5>
+                                <h4><span class="label label-primary big-label">{{getDistance}} miles</span></h4>
+                            </div>
+                            <div class="col-xs-6">
+                                <h5>Starts in</h5>
+                                <h4><span class="label label-primary big-label">{{getCountdown}}</span></h4>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <button class="btn btn-danger big-button" type="button">Leave</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </a>
 </template>
