--- a/spawn/client/templates/list/search.html
+++ b/spawn/client/templates/list/search.html
@@ -1,54 +1,65 @@
 <template name="search">
     <!-- <div class="container"> -->
     <div class="row">
-    <div class="col-xs-5">
-        <div>
-            <span>Filter by:</span>
-            <label class="checkbox-inline"><input type="checkbox" name="hostFilter" id="hostFilter" value="" checked>Host</label>
-            <label class="checkbox-inline"><input type="checkbox" name="eventNameFilter" id="eventNameFilter" value="" checked>Event name</label>
-            <label class="checkbox-inline"><input type="checkbox" name="descriptionFilter" id="descriptionFilter" value="" checked>Description</label>
-        </div>
-        <div class="input-group form">
-            <input type="text" class="form-control" name="searchTerm" id="searchTerm" placeholder="search events here" />
-        </div>
-        <!-- <div>
+        <div class="col-xs-5">
+            <div>
+                <span>Filter by:</span>
+                <label class="checkbox-inline">
+                    <input type="checkbox" name="hostFilter" id="hostFilter" value="" checked>Host</label>
+                <label class="checkbox-inline">
+                    <input type="checkbox" name="eventNameFilter" id="eventNameFilter" value="" checked>Event name</label>
+                <label class="checkbox-inline">
+                    <input type="checkbox" name="descriptionFilter" id="descriptionFilter" value="" checked>Description</label>
+            </div>
+            <div class="input-group form">
+                <input type="text" class="form-control" name="searchTerm" id="searchTerm" placeholder="search events here" />
+            </div>
+            <!-- <div>
             <span>Sort by:</span>
             <label class="radio-inline"><input type="radio" name="sortRadio" id="hostRadio" value="">Host</label>
             <label class="radio-inline"><input type="radio" name="sortRadio" id="eventNameRadio" value="">Event name</label>
             <label class="radio-inline"><input type="radio" name="sortRadio" id="capacityRadio" value="">Capacity</label>
             <label class="radio-inline"><input type="radio" name="sortRadio" id="timeUntilRadio" value="" checked="checked">Time left</label>
         </div> -->
-    </div>
-    <div class="col-xs-7">
-        <!-- <div class="input-group form">
+        </div>
+        <div class="col-xs-7">
+            <!-- <div class="input-group form">
             <input type="text" class="form-control" name="searchTerm" id="searchTerm" placeholder="search events here" />
         </div> -->
-        <div>
-            <span>Sort by:</span>
-            <label class="radio-inline"><input type="radio" name="sortRadio" id="hostRadio" value="">Host</label>
-            <label class="radio-inline"><input type="radio" name="sortRadio" id="eventNameRadio" value="">Event name</label>
-            <label class="radio-inline"><input type="radio" name="sortRadio" id="capacityRadio" value="">Capacity</label>
-            <label class="radio-inline"><input type="radio" name="sortRadio" id="timeUntilRadio" value="" checked="checked">Time left</label>
+            <div>
+                <span>Sort by:</span>
+                <label class="radio-inline">
+                    <input type="radio" name="sortRadio" id="hostRadio" value="">Host</label>
+                <label class="radio-inline">
+                    <input type="radio" name="sortRadio" id="eventNameRadio" value="">Event name</label>
+                <label class="radio-inline">
+                    <input type="radio" name="sortRadio" id="capacityRadio" value="">Capacity</label>
+                <label class="radio-inline">
+                    <input type="radio" name="sortRadio" id="timeUntilRadio" value="" checked="checked">Time left</label>
+            </div>
+            <div>
+                <span>Direction:</span>
+                <label class="radio-inline">
+                    <input type="radio" name="directionRadio" id="ascendingRadio" value="" checked="checked">Ascending</label>
+                <label class="radio-inline">
+                    <input type="radio" name="directionRadio" id="descendingRadio" value="">Descending</label>
+            </div>
         </div>
-        <div>
-            <span>Direction:</span>
-            <label class="radio-inline"><input type="radio" name="directionRadio" id="ascendingRadio" value="" checked="checked">Ascending</label>
-            <label class="radio-inline"><input type="radio" name="directionRadio" id="descendingRadio" value="">Descending</label>
-        </div>
-    </div>
-    
+
     </div>
 
     <div class="row row-centered" id="results">
-            {{#each results}}
-                <div class="col-sm-4 col-centered">
-            {{> eventItem}}
+        {{#each results}}
+        <div class="container">
+            <div class="col-sm-4 col-centered">
+                {{> eventItem}}
+            </div>
         </div>
-            {{/each}}
+        {{/each}}
     </div>
-    
+
     {{#if noResults}}
-         <div class="no-results col-xs-12">No results found!</div>
+    <div class="no-results col-xs-12">No results found!</div>
     {{/if}}
     <!--{{> EasySearch.Input index=tasksIndex attributes=inputAttributes}}
     
