implemented facebook friends interactions

--- a/spawn/client/templates/application/profile.html
+++ b/spawn/client/templates/application/profile.html
@@ -15,9 +15,9 @@
             </h1>
 
             <h3>Friends</h3>
-            <div class="list-group">
+            <div id="fbPhotoCircles" class="row well">
                 {{#each friends}}
-                    {{this}}
+                    {{> userThumbnail}}
                 {{/each}}
             </div>
 
