--- a/spawn/client/templates/events/viewEvent.html
+++ b/spawn/client/templates/events/viewEvent.html
@@ -39,12 +39,13 @@
       <h2>Participants</h2>
       <div id="fbPhotoCircles" class="row well">
         {{#each attendees}}
-          <a href="/prof/{{this.uid}}" id="joinedImgBox" class="thumbnail col-sm-2">
-            <p id="joinedName">{{this.name}}</p>
+          {{> userThumbnail}}
+          <!-- <a href="/prof/{{uid}}" id="joinedImgBox" class="thumbnail col-sm-2">
+            <p id="joinedName">{{name}}</p>
             <div class="img-responsive">
-              <img id="joinedImg" class="img-rounded" src={{this.pic}}>
+              <img id="joinedImg" class="img-rounded" src={{pic}}>
             </div>
-          </a>
+          </a> -->
         {{/each}}
       </div>
 
