added directions, leave button function

--- a/spawn/client/templates/events/eventItem.html
+++ b/spawn/client/templates/events/eventItem.html
@@ -25,16 +25,16 @@ Add max participants
                         <div class="row">
                             <div class="col-xs-6 ">
                                 <h5>Distance</h5>
-                                <h4><span class="label label-primary big-label">{{getDistance}} miles</span></h4>
+                                <button class="btn btn-primary big-button" id="distanceButton">{{getDistance}} miles</button>
                             </div>
                             <div class="col-xs-6">
                                 <h5>Starts in</h5>
-                                <h4><span class="label label-primary big-label">{{getCountdown}}</span></h4>
+                                <button class="btn btn-primary big-button">{{getCountdown}}</button>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-12">
-                                <button class="btn btn-danger big-button" type="button">Leave</button>
+                                <button class="btn btn-danger big-button" id="leaveEvent" type="button">Leave</button>
                             </div>
                         </div>
                     </div>
