--- a/spawn/client/templates/list/eventsPage.html
+++ b/spawn/client/templates/list/eventsPage.html
@@ -1,5 +1,5 @@
 <template name="eventsPage">
-    <h1 id="currentEvents">Happening Now</h1>
+    <h1 id="currentEvents">Happening Soon</h1>
     <!--{{> searchBar}}
     {{> searchResult}}-->
 
