--- a/spawn/client/stylesheets/style.css
+++ b/spawn/client/stylesheets/style.css
@@ -58,8 +58,8 @@ body {
 }
 
 .tile-bar {
-    max-height: 100px;
-    min-height: 100px;
+    max-height: 150px;
+    min-height: 150px;
 }
 
 #numParticipants{
@@ -70,6 +70,8 @@ body {
 }
 
 .tile-image {
+    max-width: 100px;
+    min-width: 100px;
     max-height: 100px;
     min-height: 100px;
 }
@@ -80,11 +82,9 @@ body {
 
 .big-button{
     width:80%;
+    margin-bottom:10px;
 }
-.big-label{
-     display: block;
-    width:100%;
-}
+
 
 /* Single Event Page */
 
