implemented event history and display of history in profile pages

--- a/spawn/client/templates/application/profile.html
+++ b/spawn/client/templates/application/profile.html
@@ -23,7 +23,7 @@
 
             <h3>Events Created</h3>
             <div class="list-group">
-                {{#each tasks}}
+                {{#each pastEvents}}
                     {{> eventItem}}
                 {{/each}}
             </div>
