--- a/spawn/client/templates/list/search.html
+++ b/spawn/client/templates/list/search.html
@@ -36,6 +36,8 @@
                     <input type="radio" name="sortRadio" id="capacityRadio" value="">Capacity</label>
                 <label class="radio-inline">
                     <input type="radio" name="sortRadio" id="timeUntilRadio" value="" checked="checked">Time left</label>
+                <label class="radio-inline">
+                    <input type="radio" name="distanceRadio" id="distanceRadio" value="">Distance</label>
             </div>
             <div>
                 <span>Direction:</span>
