--- a/spawn/client/templates/list/search.html
+++ b/spawn/client/templates/list/search.html
@@ -37,7 +37,7 @@
                 <label class="radio-inline">
                     <input type="radio" name="sortRadio" id="timeUntilRadio" value="" checked="checked">Time left</label>
                 <label class="radio-inline">
-                    <input type="radio" name="distanceRadio" id="distanceRadio" value="">Distance</label>
+                    <input type="radio" name="sortRadio" id="distanceRadio" value="">Distance</label>
             </div>
             <div>
                 <span>Direction:</span>
