--- a/spawn/client/templates/list/eventsPage.html
+++ b/spawn/client/templates/list/eventsPage.html
@@ -1,7 +1,9 @@
 <template name="eventsPage">
-    <h1 id="currentEvents">Happening Soon</h1>
+    <div class="jumbotron" id="nearby">
+        
     <div class="container">
         <div class="row row-centered" id="myEvents">
+            {{#if myfirstevent.[0]}}
             {{#with myfirstevent.[0]}}
             <div class="col-sm-offset-{{offset}} col-sm-4 col-centered">
                 {{> eventItem}}
@@ -12,11 +14,16 @@
                 {{> eventItem}}
             </div>
             {{/each}}
+             {{else}}
+            <span id="noEvents"><h1>You have no events.  Go join one!</h1></span>
+            {{/if}}
         </div>
     </div>
+        </div>
     <h1 id="currentEvents">Near You</h1>
     <!--{{> searchBar}}
     {{> searchResult}}-->
 
     {{> search}}
+        
 </template>
