fixed bugs involved with friends and profile pages

--- a/spawn/client/templates/application/profile.html
+++ b/spawn/client/templates/application/profile.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-2">
-                    <a href={{currentUser.services.facebook.link}} class="thumbnail">
+                    <a href='http://www.facebook.com/{{this.services.facebook.id}}' class="thumbnail">
                         <img class="img-rounded" id="eventPicture" style="display:inline" src={{this.profile.picture}}>
                     </a>
                 </div>
@@ -28,4 +28,4 @@
                 {{/each}}
             </div>
         </div>
-</template> 
+</template>
