--- a/spawn/client/templates/list/search.html
+++ b/spawn/client/templates/list/search.html
@@ -42,9 +42,15 @@
             <div>
                 <span>Direction:</span>
                 <label class="radio-inline">
-                    <input type="radio" name="directionRadio" id="ascendingRadio" value="" checked="checked">Ascending</label>
+                    <input type="radio" name="directionFilter" id="ascendingFilter" value="" checked="checked">Ascending</label>
                 <label class="radio-inline">
-                    <input type="radio" name="directionRadio" id="descendingRadio" value="">Descending</label>
+                    <input type="radio" name="directionFilter" id="descendingFilter" value="">Descending</label>
+            </div>
+            <div>
+                <label class="radio-inline">
+                    <input type="radio" name="privacyFilter" id="publicFilter" value="" checked="checked">Public</label>
+                <label class="radio-inline">
+                    <input type="radio" name="privacyFilter" id="privateFilter" value="">Private</label>
             </div>
         </div>
 
