fixed tile in stuff

--- a/spawn/client/templates/application/profile.html
+++ b/spawn/client/templates/application/profile.html
@@ -24,7 +24,7 @@
             <h3>Events Created</h3>
             <div class="list-group">
                 {{#each pastEvents}}
-                    {{> eventItem}}
+                    {{> listEventItem}}
                 {{/each}}
             </div>
         </div>
