edited history events wording

--- a/spawn/client/templates/application/profile.html
+++ b/spawn/client/templates/application/profile.html
@@ -21,7 +21,7 @@
                 {{/each}}
             </div>
 
-            <h3>Events Created</h3>
+            <h3>Events History</h3>
             <div class="list-group">
                 {{#each pastEvents}}
                     {{> listEventItem}}
