fixed friends updating on profiles, and more UI improvements/cleanup

--- a/spawn/client/templates/events/viewEvent.html
+++ b/spawn/client/templates/events/viewEvent.html
@@ -23,7 +23,7 @@
             <li class="list-group-item"><b>Time:</b> {{time}}</li>
             <li class="list-group-item"><b>Location:</b> {{locationName}}</li>
             <li class="list-group-item"><b>Description:</b> {{description}}</li>
-            <li class="list-group-item"><b>Distance:</b> {{getDistance}}</li>
+            <li class="list-group-item"><b>Distance:</b> {{getDistance}} miles</li>
           </ul>
           <div class="well">
             <span style="font-size: large;">Participants: {{attendees.length}}/{{numParticipants}}</span>
