--- a/spawn/client/templates/spawn/landingPage.html
+++ b/spawn/client/templates/spawn/landingPage.html
@@ -1,7 +1,9 @@
 <template name="landingPage">
     <div class="container">
-        <div class="jumbotron">
+        <div class="jumbotron" id="mainJumbotron">
             <h1>Welcome to Spawn</h1>
+            <p>Spawn makes it easy to meet up, anytime, anywhere.</p>
+            <p>Get started now.</p>
         </div>
     </div>
 </template>
