--- a/spawn/client/templates/map/addEventMap.html
+++ b/spawn/client/templates/map/addEventMap.html
@@ -4,7 +4,11 @@
             <input type="text" class="form-control" id="places">
         </div>
         <div class="map-container">
-            {{#unless geolocationError}} {{> googleMap name="map" options=mapOptions}} {{else}} Geolocation failed: {{geolocationError}} {{/unless}}
+            {{#unless geolocationError}}
+            	{{> googleMap name="map" options=mapOptions}}
+            {{else}}
+            	Geolocation failed: {{geolocationError}}
+            {{/unless}}
         </div>
     </div>
 </template>
